generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}
datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}


model User {
  id           String       @id @default(cuid())
  email        String       @unique
  createdAt    DateTime?    @default(now())
  accountValue Int
  buyingPower  Int
  cash         Int
  portfolioID1 String       @unique @default(cuid())
  buyOrders    BuyOrders[]
  password     Password?
  portfolioID  Portfolio?
  sellOrders   SellOrders[]
}

model Password {
  hash   String
  userId String @unique
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Portfolio {
  portfolioID String @unique
  user        User   @relation(fields: [portfolioID], references: [portfolioID1], onDelete: Cascade)
  held        Held?
}

model BuyOrders {
  name                String       @unique
  quantity            Int          @unique
  userId              String?
  marketOrderPrice    Int?
  limitOrderMaxPrice  Int?
  marketOrderQuantity Int?
  limitOrder          LimitOrder?  @relation(fields: [limitOrderMaxPrice], references: [maxPrice])
  marketOrder         MarketOrder? @relation(fields: [marketOrderQuantity], references: [quantity])
  User                User?        @relation(fields: [userId], references: [id])
}

model SellOrders {
  name                String       @unique
  quantity            Int          @unique
  userId              String?
  marketOrderPrice    Int?
  limitOrderMaxPrice  Int?
  marketOrderQuantity Int?
  limitOrder          LimitOrder?  @relation(fields: [limitOrderMaxPrice], references: [maxPrice])
  marketOrder         MarketOrder? @relation(fields: [marketOrderQuantity], references: [quantity])
  User                User?        @relation(fields: [userId], references: [id])
}

model MarketOrder {
  quantity   Int          @unique
  BuyOrders  BuyOrders[]
  SellOrders SellOrders[]
}

model LimitOrder {
  maxPrice   Int          @unique
  minPrice   Int          @unique
  quantity   Int          @unique
  BuyOrders  BuyOrders[]
  SellOrders SellOrders[]
}

model Held {
  name        String?   @unique
  quantity    Int?
  portfolioID String    @id
  Portfolio   Portfolio @relation(fields: [portfolioID], references: [portfolioID])

  @@unique([name, portfolioID])
}
